[WK2] REGRESSION(r128623): It made layout tests extremely slow https://bugs.webkit.org/show_bug.cgi?id=96862

Reviewed by Simon Hausmann.

Disable calling the extremely slow WKBundleSetDatabaseQuota() between tests until proper fix.

* WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::beginTesting):

Canonical link: https://commits.webkit.org/116162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130163 268f45cc-cd09-0410-ab3c-d52691b4dbfc